@@ -1,0 +1,108 @@
+package HTML::Forms::Field::Link;
+
+use HTML::Forms::Constants qw( FALSE META NUL TRUE );
+use HTML::Forms::Types     qw( Str );
+use Moo;
+use HTML::Forms::Moo;
+
+extends 'HTML::Forms::Field::NoValue';
+
+has 'display_as' => is => 'lazy', isa => Str, default => sub { shift->label };
+
+has 'href' => is => 'rw', isa => Str, default => NUL;
+
+has '+do_label' => default => FALSE;
+
+has '+widget' => default => 'Link';
+
+has '+wrapper_class' => default => 'display-link';
+
+sub _build_label {
+   return 'Link';
+}
+
+use namespace::autoclean -except => META;
+
+1;
+
+__END__
+
+=pod
+
+=encoding utf-8
+
+=head1 Name
+
+HTML::Forms::Field::Link - Generates markup for and processes input from HTML forms
+
+=head1 Synopsis
+
+   use HTML::Forms::Field::Link;
+   # Brief but working code examples
+
+=head1 Description
+
+=head1 Configuration and Environment
+
+Defines the following attributes;
+
+=over 3
+
+=back
+
+=head1 Subroutines/Methods
+
+Defines the following methods;
+
+=over 3
+
+=back
+
+=head1 Diagnostics
+
+None
+
+=head1 Dependencies
+
+=over 3
+
+=item L<Moo>
+
+=back
+
+=head1 Incompatibilities
+
+There are no known incompatibilities in this module
+
+=head1 Bugs and Limitations
+
+There are no known bugs in this module. Please report problems to
+http://rt.cpan.org/NoAuth/Bugs.html?Dist=HTML-Forms.
+Patches are welcome
+
+=head1 Acknowledgements
+
+Larry Wall - For the Perl programming language
+
+=head1 Author
+
+Peter Flanigan, C<< <pjfl@cpan.org> >>
+
+=head1 License and Copyright
+
+Copyright (c) 2024 Peter Flanigan. All rights reserved
+
+This program is free software; you can redistribute it and/or modify it
+under the same terms as Perl itself. See L<perlartistic>
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE
+
+=cut
+
+# Local Variables:
+# mode: perl
+# tab-width: 3
+# End:
+# vim: expandtab shiftwidth=3:
